# convex-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: convex_chat_client.rs
examples/quickstart/: main.rs  package.json
examples/quickstart/convex/: getTasks.js  tasks.js
src/: lib.rs
src/base_client/: mod.rs  query_result.rs
src/client/: mod.rs  subscription.rs  worker.rs
src/sync/: mod.rs  testing.rs  web_socket_manager.rs
src/value/: mod.rs  sorting.rs
src/value/export/: mod.rs  roundtrip.rs
src/value/json/: mod.rs
sync_types/: Cargo.toml
sync_types/src/: backoff.rs  headers.rs  identifier.rs  json.rs  lib.rs  module_path.rs  timestamp.rs  types.rs  udf_path.rs
sync_types/src/types/: json.rs  mod.rs
